# blindspot

./: .blindspot.yaml.example  .gitignore  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  pyproject.toml
docs/: README.md  algorithms.md  architecture.md  cli-reference.md  configuration.md  glossary.md  outputs.md  overview.md  quickstart.md
examples/: synthetic_demo.py
src/blindspot/: __init__.py  __main__.py  cli.py  config.py
src/blindspot/actions/: __init__.py  compound.py  confidence.py  models.py  recommender.py
src/blindspot/ai_signal/: __init__.py  detector.py  models.py  profile.py  quality.py
src/blindspot/codeowners/: __init__.py  engine.py  parser.py
src/blindspot/collector/: __init__.py  bots.py  filters.py  git.py  mailmap.py  models.py  review_models.py
src/blindspot/dependency_graph/: __init__.py  aggregation.py  builder.py  importance.py  llm_fallback.py  models.py
src/blindspot/diff_analysis/: __init__.py  classifier.py  commit_intent.py
src/blindspot/narrative/: __init__.py  (+9 more)
tests/: conftest.py  test_ai_readiness.py  test_ai_signal.py  test_bitbucket_client.py  test_bitbucket_config.py  test_bitbucket_pr_collector.py  test_bitbucket_remote.py  test_bot_detection.py  test_bus_factor.py  test_business_implication.py  test_change_fear.py  test_cli.py  test_codeowners.py  test_commit_intent.py  test_compound.py  test_confidence.py  test_correction_load.py  test_departure.py  test_dependency_graph.py  test_dependency_graph_languages.py  test_diff_analysis.py  test_exec_risks.py  test_filters.py  test_fragile_velocity.py  test_gh_client.py  test_git_collector.py  test_github_client.py  test_github_config.py  test_github_remote.py  test_key_signals.py  test_knowledge_decay.py  test_knowledge_graph.py  test_mailmap.py  test_narrative.py  test_narrative_engine_selection.py  test_openai_client.py  test_ownership.py  test_pr_collector.py  test_profile.py  test_recommendations.py  (+7 more)
(+54 files in other folders)
