[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "blindspot"
version = "0.0.5c0"
description = "The bus factor for the AI era. Map team knowledge blindspots before someone leaves."
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.11"
authors = [
    { name = "Aydın Çetin" },
]
keywords = ["bus-factor", "engineering-resilience", "ownership", "knowledge-graph", "code-analysis"]
classifiers = [
    "Development Status :: 2 - Pre-Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Topic :: Software Development :: Quality Assurance",
]
dependencies = [
    "typer>=0.12",
    "gitpython>=3.1.40",
    "networkx>=3.2",
    "jinja2>=3.1",
    "pyyaml>=6.0",
    "pydantic>=2.5",
    "rich>=13.7",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
    "ruff>=0.5",
    "mypy>=1.10",
    "types-pyyaml",
]

[project.scripts]
blindspot = "blindspot.cli:app"

[project.urls]
Homepage = "https://github.com/aydincn/blindspot"
Repository = "https://github.com/aydincn/blindspot"
Documentation = "https://github.com/aydincn/blindspot/tree/main/docs"
Changelog = "https://github.com/aydincn/blindspot/blob/main/CHANGELOG.md"

[tool.hatch.build.targets.wheel]
packages = ["src/blindspot"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "N", "UP", "B", "SIM", "RUF"]
ignore = ["E501"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-ra --strict-markers"

[tool.mypy]
python_version = "3.11"
strict = true
warn_unused_configs = true
